# pyapi-studio

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/core/: __init__.py  request_executor.py  variable_resolver.py
src/data/: __init__.py  database.py  models.py
src/ui/: __init__.py  main_window.py
src/ui/styles/: dark.qss
src/ui/widgets/: __init__.py  code_editor.py  collection_tree.py  history_panel.py  key_value_table.py  response_viewer.py  url_bar.py
